# seriesembed

./: .gitignore  CODE_OF_CONDUCT.md  Cargo.nix  Cargo.toml  LICENSE  basic_series_test.go  crates-io.list  crates-io.nix  critera.go  emseries_suite_test.go  pull_request_template.md  readme.md  series.go  shell.nix  types.go
.circleci/: config.yml
fixtures/: weight.json
nixpkgs/: rust-1.33.nix
src/: criteria.rs  date_time_tz.rs  interval.rs  lib.rs  series.rs  types.rs
tests/: serialization.rs  timeseries.rs
tests/helpers/: mod.rs
