[package]
name = "emseries"
version = "0.1.0"
authors = ["Savanni D'Gerinel <savanni@luminescent-dreams.com>"]
description = "an Embedded Time Series database"
license = "BSD3"
license-file = "LICENSE"
documentation = "https://github.com/luminescent-dreams/emseries"
homepage = "https://github.com/luminescent-dreams/emseries"
repository = "https://github.com/luminescent-dreams/emseries"
categories = ["database-implementations"]

include = [
    "**/*.rs",
    "Cargo.toml",
    "fixtures/*",
]

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
dimensioned = "0.7.0"
serde = "1"
serde_derive = "1"
serde_json = "1.0"
uuid = { version = "0.6.5", features = ["v4"] }
yaml-rust = "0.4.0"

