[package]
name = "emseries"
version = "0.4.0"
authors = ["Savanni D'Gerinel <savanni@luminescent-dreams.com>"]
description = "an Embedded Time Series database"
license = "BSD-3-Clause"
documentation = "https://docs.rs/emseries"
homepage = "https://github.com/luminescent-dreams/emseries"
repository = "https://github.com/luminescent-dreams/emseries"
categories = ["database-implementations"]
edition = "2021"

include = [
    "**/*.rs",
    "Cargo.toml",
    "fixtures/*",
]

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = { version = "0.4", features = ["serde"] }
dimensioned = { version = "0.8.0", features = ["serde"] }
serde = "1"
serde_derive = "1"
serde_json = "1.0"
tempfile = "3.1"
uuid = { version = "0.6.5", features = ["v4", "serde"] }
yaml-rust = "0.4.0"
